--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -12,14 +12,19 @@
                 <h5 class="mb-0">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
                        aria-controls="collapseOne">
-                        {% trans "FAQ #1" %}
+                        {% trans "Why should I use MyMensor?" %}
                     </a>
                 </h5>
             </div>
 
             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                 <div class="card-block">
-                    {% trans "Text of FAQ #1" %}
+                    {% trans "Because there is no substitute for your own eyes! With MyMensor, it is like being there. Using our technology you will know where and when the photos and videos were taken. You will also be certain that photos and videos where not tampered with." %}
+                    {% trans "Do you need to be sure that something was done? Use MyMensor to verify completion, with precise location and timing." %}
+                    <p></p>
+                    {% trans "Most popular apps that are used to distribute media using your smartphone allow all diferent sources for the media, including outside sources. With MyMensor ALL MEDIA is produced with our own software, so you REALLY know where that media came from." %}
+                    <p></p>
+                    {% trans "Possibilities are endless, even not using Augmented Reality (AR). But if you use AR, then the true power of MyMensor emerges, with automatic photos and filing." %}
                 </div>
             </div>
         </div>
