--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -261,7 +261,7 @@
                     <div class="row">
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2 mb-2">
-                                <h6 class="text-muted text-uppercase mb-4">MyMensor</h6>
+                                <h5 class="text-primary text-uppercase mb-4">MyMensor</h5>
                                 <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
                                 <p class="pb-2">Even simpler. For those that just need the certification and sharing
                                     power.</p>
@@ -282,7 +282,7 @@
 
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
-                                <h6 class="text-muted text-uppercase mb-4">MyMensorAR</h6>
+                                <h5 class="text-primary text-uppercase mb-4">MyMensorAR</h5>
                                 <img class="mb-4" src="{% static "images/price.svg" %}">
                                 <p class="pb-2">The one size fits all solution. Use Augmented Reality and Data Features
                                     to control your personal and business projects</p>
@@ -301,7 +301,7 @@
 
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
-                                <h6 class="text-muted text-uppercase mb-4">MyMensorCorp</h6>
+                                <h5 class="text-primary text-uppercase mb-4">MyMensorCorp</h5>
                                 <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
                                 <p class="pb-2">A taylor made solution for your corporation. Drop us an email and we
                                     will build your custom setup together.</p>
