--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -19,7 +19,7 @@
 
             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                 <div class="card-block">
-                    {% trans "Because there is no substitute for your own eyes! With MyMensor, it is like being there. Using our technology you will know where and when the photos and videos were taken. You will also be certain that photos and videos where not tampered with." %}
+                    {% trans "Because there is no substitute for your own eyes and ears! With MyMensor, it is like being there. Using our technology you will know where and when the photos and videos were taken. You will also be certain that photos and videos where not tampered with." %}
                     {% trans "Do you need to be sure that something was done? Use MyMensor to verify completion, with precise location and timing." %}
                     <p></p>
                     {% trans "Most popular apps that are used to distribute media using your smartphone allow all diferent sources for the media, including outside sources. With MyMensor ALL MEDIA is produced with our own software, so you REALLY know where that media came from." %}
