--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -33,13 +33,21 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"
                        aria-expanded="false" aria-controls="collapseTwo">
-                        {% trans "FAQ #2" %}
+                        {% trans "Can I share the certified media with someone that DOES NOT have a MyMensor Account?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="card-block">
-                    {% trans "Text of FAQ #2" %}
+                    {% trans "YES, you can! And you can do it manually or automatically!" %}
+                    {% trans "In the mobile app you can share your captures using the normal sharing capabilities of your smartphone." %}
+                    <p></p>
+                    {% trans "When using our webapp, you can do it manually " %}<a
+                        href="https://app.mymensor.com/vpdetail/" class="text-primary">{% trans "(See here.)" %}</a>
+                    <p></p>
+                    {% trans "Or you can automatically share your captures to Twitter, Facebook or email " %}<a
+                        href="https://app.mymensor.com/vpsetup/"
+                        class="text-primary">{% trans "(Configure here.)" %}</a>
                 </div>
             </div>
         </div>
@@ -48,13 +56,120 @@
                 <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"
                        aria-expanded="false" aria-controls="collapseThree">
-                        {% trans "FAQ #3" %}
+                        {% trans "My smartphone clock is wrongly configured, so goodbye certified time?" %}
                     </a>
                 </h5>
             </div>
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="card-block">
-                    {% trans "Text of FAQ #3" %}
+                    {% trans "No! The only thing you need to certify your time is an internet connection. Our software DOES NOT use the internal smartphone clock." %}
+                    {% trans "Every time you run your MyMensor mobile app we check the time using iternet time servers and after that we use our own clock." %}
+                    {% trans "When you see the green clock icon in your smartphone screen then your time is certified!" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading4">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse4"
+                       aria-expanded="false" aria-controls="collapse4">
+                        {% trans "FAQ #4" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse4" class="collapse" role="tabpanel" aria-labelledby="heading4">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#4" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading5">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse5"
+                       aria-expanded="false" aria-controls="collapse5">
+                        {% trans "FAQ #5" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse5" class="collapse" role="tabpanel" aria-labelledby="heading5">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#5" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading6">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse6"
+                       aria-expanded="false" aria-controls="collapse6">
+                        {% trans "FAQ #6" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse6" class="collapse" role="tabpanel" aria-labelledby="heading6">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#6" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading7">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse7"
+                       aria-expanded="false" aria-controls="collapse7">
+                        {% trans "FAQ #7" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse7" class="collapse" role="tabpanel" aria-labelledby="heading7">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#7" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading8">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse8"
+                       aria-expanded="false" aria-controls="collapse8">
+                        {% trans "FAQ #8" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse8" class="collapse" role="tabpanel" aria-labelledby="heading8">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#8" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading9">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse9"
+                       aria-expanded="false" aria-controls="collapse9">
+                        {% trans "FAQ #9" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse9" class="collapse" role="tabpanel" aria-labelledby="heading9">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#9" %}
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="heading10">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse10"
+                       aria-expanded="false" aria-controls="collapse10">
+                        {% trans "FAQ #10" %}
+                    </a>
+                </h5>
+            </div>
+            <div id="collapse10" class="collapse" role="tabpanel" aria-labelledby="heading10">
+                <div class="card-block">
+                    {% trans "Answer to FAQ#10" %}
                 </div>
             </div>
         </div>
