--- a/mymwebsite/templates/privacy.html
+++ b/mymwebsite/templates/privacy.html
@@ -5,7 +5,7 @@
     <p></p>
     <h3>Privacy Policy</h3>
     <p></p>
-    <p>Last revision on May 25th 2017.</p>
+    <p>Last revision on June 2nd 2017.</p>
     <p></p>
     <p class="text-justify">This Privacy Policy sets forth MyMensor's policy with respect to information including
         personally identifiable data and other information that is collected from visitors to the Site and Services.
