--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -75,6 +75,25 @@
                         </ul>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-5 mb-5">
+                        {% get_current_language as LANGUAGE_CODE %}
+                        {% get_available_languages as LANGUAGES %}
+                        {% get_language_info_list for LANGUAGES as languages %}
+                        <ul class="list-unstyled list-spaced">
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Language" %}</h6></li>
+                            {% for language in languages %}
+                                <li>
+                                    <a class="text-muted" href="/{{ language.code }}/"
+                                            {% if language.code == LANGUAGE_CODE %}
+                                       class="selected" {% endif %}>
+                                        {{ language.name_local }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     {% endblock %}
