--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -156,7 +156,7 @@
                 </div>
             </div>
 
-            <div class="block block-inverse app-high-praise"
+            <div class="block block-inverse block-parallax app-high-praise"
                  style="background-image: url({% static 'images/autosharing.jpg' %});">
                 <div class="container">
                     <div class="row app-align-center py-3">
