--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -337,6 +337,23 @@
         </div>
     {% endblock %}
     {% block javascript %}
-
+        <script>
+            $(document).ready(function () {
+                if ($(".eupopup").length > 0) {
+                    $(document).euCookieLawPopup().init({
+                        {% get_current_language as LANGUAGE_CODE %}
+                        {% if LANGUAGE_CODE == "pt" %}
+                        'info': 'YOU_CAN_ADD_MORE_SETTINGS_HERE',
+                        'popupTitle': 'Este website utiliza cookies. ',
+                        'popupText': 'Nós utilizamos cookies para lhe dar a melhor experiência. Se você continuar a usar nosso website, consideraremos que você aceita receber todos os cookies deste website.'
+                        {% else %}
+                        'info': 'YOU_CAN_ADD_MORE_SETTINGS_HERE',
+                        'popupTitle': 'This website is using cookies. ',
+                        'popupText': 'We use them to give you the best experience. If you continue using our website, we\'ll assume that you are happy to receive all cookies on this website.'
+                        {% endif %}
+                    });
+                }
+            });
+        </script>
     {% endblock %}
 {% endlocaltime %}
