--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-md-3 mb-5">
                         <ul class="list-unstyled list-spaced">
-                            <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
+                            <li class="mb-2"><h6 class="text-uppercase">{% trans "Legal" %}</h6></li>
                             <li><a class="text-muted"
                                    href="https://mymensor.com/{{ LANGUAGE_CODE }}/terms/">{% trans "Terms of Service" %}</a>
                             </li>
