--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -26,20 +26,20 @@
         <div class="stage-shelf stage-shelf-right hidden eupopup eupopup-bottom eupopup-style-compact" id="sidebar">
             <ul class="nav nav-bordered nav-stacked flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'docs' %}">Docs</a>
+                    <a class="nav-link active" href="{% url 'docs' %}">{% trans "Docs" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'videos' %}">Videos</a>
+                    <a class="nav-link" href="{% url 'videos' %}">{% trans "Videos" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
+                    <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://app.mymensor.com/accounts/login/">LOGIN</a>
+                    <a class="nav-link" href="https://app.mymensor.com/accounts/login/">{% trans "LOGIN" %}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://app.mymensor.com/accounts/register/"><strong
-                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">Register</strong></a>
+                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                 </li>
             </ul>
         </div>
@@ -66,20 +66,20 @@
                         <div class="hidden-sm-down text-uppercase">
                             <ul class="navbar-nav">
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" href="{% url 'docs' %}">Docs</a>
+                                    <a class="nav-link" href="{% url 'docs' %}">{% trans "Docs" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" href="{% url 'videos' %}">Videos</a>
+                                    <a class="nav-link" href="{% url 'videos' %}">{% trans "Videos" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
+                                    <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" href="https://app.mymensor.com/accounts/login/">Login</a>
+                                    <a class="nav-link" href="https://app.mymensor.com/accounts/login/">{% trans "LOGIN" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
                                     <a class="nav-link" href="https://app.mymensor.com/accounts/register/"><strong
-                                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">Register</strong></a>
+                                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                                 </li>
                             </ul>
                         </div>
@@ -253,8 +253,8 @@
 
                     <div class="row mb-5">
                         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                            <h6 class="text-muted text-uppercase mb-2">Business Talk</h6>
-                            <h3>Simple plans. Direct to the point.</h3>
+                            <h6 class="text-muted text-uppercase mb-2">{% trans "Business Talk" %}</h6>
+                            <h3>{% trans "Simple plans. Direct to the point." %}</h3>
                         </div>
                     </div>
 
@@ -262,36 +262,36 @@
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2 mb-2">
                                 <h5 class="text-primary text-uppercase mb-4">MyMensor</h5>
+                                {% get_current_language as LANGUAGE_CODE %}
+                                {% if LANGUAGE_CODE == "pt" %}
                                 <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
-                                <p class="pb-2">Even simpler. For those that just need the certification and sharing
-                                    power.</p>
+                                {% else %}
+                                <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
+                                {% endif %}
+                                <p class="pb-2">{% trans "Even simpler. For those that just need the certification and sharing power." %}</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>Certification</strong> time and location</li>
-                                <li class="py-4"><strong>Sharing</strong> automatic sharing to Facebook, Twitter and
-                                    Email.
+                                <li class="py-4"><strong>{% trans "Certification" %}</strong>{% trans " time and location" %}</li>
+                                <li class="py-4"><strong>{% trans "Sharing" %}</strong>{% trans " automatic sharing to Facebook, Twitter and Email." %}
                                 </li>
-                                <li class="py-4"><strong>Secure</strong> all HTTPS</li>
+                                <li class="py-4"><strong>{% trans "Secure" %}</strong>{% trans " all HTTPS" %}</li>
                             </ul>
 
-                            <button class="btn btn-lg btn-secondary btn-block">
-                                COMING SOON
-                            </button>
+                            <button class="btn btn-lg btn-secondary btn-block">{% trans "COMING SOON" %}</button>
                         </div>
 
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
                                 <h5 class="text-primary text-uppercase mb-4">MyMensorAR</h5>
                                 <img class="mb-4" src="{% static "images/price.svg" %}">
-                                <p class="pb-2">The one size fits all solution. Use Augmented Reality and Data Features
-                                    to control your personal and business projects</p>
+                                <p class="pb-2">{% trans "The one size fits all solution. Use Augmented Reality and Data Features to control your personal and business projects" %}</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>ALL MYMENSOR FEATURES PLUS</strong></li>
-                                <li class="py-4"><strong>AR</strong> automatic and precise captures</li>
-                                <li class="py-4"><strong>Database</strong> build your own bigdata</li>
+                                <li class="py-4"><strong>{% trans "ALL MYMENSOR FEATURES PLUS" %}</strong></li>
+                                <li class="py-4"><strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
+                                <li class="py-4"><strong>{% trans "Database" %}</strong>{% trans " build your own bigdata" %}</li>
                             </ul>
 
                             <a class="btn btn-primary btn-lg btn-block"
@@ -302,15 +302,19 @@
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
                                 <h5 class="text-primary text-uppercase mb-4">MyMensorCorp</h5>
+                                {% get_current_language as LANGUAGE_CODE %}
+                                {% if LANGUAGE_CODE == "pt" %}
                                 <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
-                                <p class="pb-2">A taylor made solution for your corporation. Drop us an email and we
-                                    will build your custom setup together.</p>
+                                {% else %}
+                                <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
+                                {% endif %}
+                                <p class="pb-2">{% trans "A taylor made solution for your corporation. Drop us an email and we will build your custom setup together." %}</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>ALL MYMENSORAR FEATURES PLUS</strong></li>
-                                <li class="py-4"><strong>API access</strong> upon request</li>
-                                <li class="py-4"><strong>Mobile App</strong> custom setups</li>
+                                <li class="py-4"><strong>{% trans "ALL MYMENSORAR FEATURES PLUS" %}</strong></li>
+                                <li class="py-4"><strong>{% trans "API access" %}</strong>{% trans " upon request" %}</li>
+                                <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " custom setups" %}</li>
                             </ul>
 
                             <a class="btn btn-primary btn-lg btn-block" href="mailto: contact@mymensor.com"
