--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -350,6 +350,8 @@
                         'info': 'YOU_CAN_ADD_MORE_SETTINGS_HERE',
                         'popupTitle': 'Este website utiliza cookies. ',
                         'popupText': 'Nós utilizamos cookies para lhe dar a melhor experiência. Se você continuar a usar nosso website, consideraremos que você aceita receber todos os cookies deste website.'
+                        'buttonContinueTitle' : 'Continuar',
+		                'buttonLearnmoreTitle' : 'Mais&nbsp;informação',
                         {% else %}
                         'info': 'YOU_CAN_ADD_MORE_SETTINGS_HERE',
                         'popupTitle': 'This website is using cookies. ',
