--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -105,6 +105,7 @@
             </div>
         </div>
     {% endblock %}
+    <div class="eupopup eupopup-bottom eupopup-style-compact"></div>
     <script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
     <script src="{% static "js/tether.min.js" %}"></script>
     <script src="{% static "js/toolkit.js" %}"></script>
