--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -55,7 +55,7 @@
                         <ul class="list-unstyled list-spaced">
                             <li class="mb-2"><h6 class="text-uppercase">{% trans 'About' %}</h6></li>
                             <li class="text-muted">
-                                {% trans "It\'s been a long journey and we are just starting! Contact us anytime at " %}<a
+                                {% trans "The journey was long, but we are just starting! Contact us anytime at " %}<a
                                     href="mailto: contact@mymensor.com">contact@mymensor.com</a>.
                             </li>
                         </ul>
