--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -1,6 +1,7 @@
 {% load staticfiles i18n tz %}
 {% localtime on %}
     {% get_current_timezone as TIME_ZONE %}
+    {% get_current_language as LANGUAGE_CODE %}
     <!DOCTYPE html>
     <html lang="en">
     <head>
