--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -1,6 +1,7 @@
 {% load staticfiles i18n tz %}
 {% localtime on %}
     {% get_current_timezone as TIME_ZONE %}
+    {% get_current_language as LANGUAGE_CODE %}
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -65,9 +66,9 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'docs' %}">{% trans "Docs" %}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'videos' %}">{% trans "Videos" %}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/login/">Login</a>
+                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">Login</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/register/"><strong
+                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
                             style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">Register</strong></a>
                     </li>
                 </ul>
@@ -86,7 +87,7 @@
                         <ul class="list-unstyled list-spaced">
                             <li class="mb-2"><h6 class="text-uppercase">{% trans 'About' %}</h6></li>
                             <li class="text-muted">
-                                {% trans "It\'s been a long journey and we are just starting! Contact us anytime at" %}<a
+                                {% trans "The journey was long, but we are just starting! Contact us anytime at " %}<a
                                     href="mailto: contact@mymensor.com">contact@mymensor.com</a>.
                             </li>
                         </ul>
