--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -264,9 +264,9 @@
                             <div class="px-2 mb-2">
                                 <h5 class="text-primary text-uppercase mb-4">MyMensor</h5>
                                 {% if LANGUAGE_CODE == "pt" %}
-                                <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
+                                <img class="mb-4" src="{% static "images/comingsooncomp_pt.svg" %}">
                                 {% elif LANGUAGE_CODE == "pt-br" %}
-                                <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
+                                <img class="mb-4" src="{% static "images/comingsooncomp_pt_BR.svg" %}">
                                 {% else %}
                                 <img class="mb-4" src="{% static "images/comingsooncomp.svg" %}">
                                 {% endif %}
@@ -305,9 +305,9 @@
                             <div class="px-2">
                                 <h5 class="text-primary text-uppercase mb-4">MyMensorCorp</h5>
                                 {% if LANGUAGE_CODE == "pt" %}
-                                <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
+                                <img class="mb-4" src="{% static "images/uponrequestcomp_pt.svg" %}">
                                 {% elif LANGUAGE_CODE == "pt-br" %}
-                                <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
+                                <img class="mb-4" src="{% static "images/uponrequestcomp_pt_BR.svg" %}">
                                 {% else %}
                                 <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
                                 {% endif %}
